--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,8 @@ a {
     } */
 
     #left-side {
-      min-width: 520px;
+      min-width: 540px;
+      /* border: 1px solid white; */
     }
 
     #right-side {
@@ -128,6 +129,7 @@ a {
       #linkedIn {
         display: inline-block;
         padding: 10px;
+        /* box-shadow: 5px 10px #888888; */
         /* color: white; */
         /* border: 1px solid white; */
       }
@@ -140,7 +142,8 @@ a {
 
       .title1-sub-container > a {
         font-size: 24px;
-        color: rgb(116, 116, 116);
+        color: rgb(146, 146, 146);
+        
         /* border: 1px solid black; */
       }
 
@@ -319,12 +322,14 @@ a {
   -webkit-animation-duration: 12s;
   animation-name: fade;
   animation-iteration-count: infinite;
+  /* animation-timing-function: ease-in-out; */
   animation-duration: 12s;
   height: 50vh;
   /* width: 200px; */
   /* min-width: 800px; */
   object-fit: cover;
   z-index: 10;
+  opacity: 0;
 }
 
   @-webkit-keyframes fade {
@@ -342,29 +347,24 @@ a {
     100% {opacity: 0;}
   }
 
+
     #g1 {
+      animation-delay: 8s;
+      -webkit-animation-delay: 8s;
       width: 100%;
-      background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     }
     #g2 {
-      -webkit-animation-delay: -8s;
+      animation-delay: 4s;
+      -webkit-animation-delay: 4s;
       width: 100%;
-      background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     }
     #g3 {
-      -webkit-animation-delay: -4s;
+      animation-delay: 0s;
+      -webkit-animation-delay: 0s;
       width: 100%;
-      background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     }
+
+    
 
     .slideshow-box {
       /* background-color: white; */
@@ -373,21 +373,16 @@ a {
 
 /* MAIN CONTENT */
 
-#f1 {
+/* #f1 {
   background-image: url("main2.JPG");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 80vh;
-  /* opacity: 0; */
-  /* opacity: 0.5; */
-  /* position: relative; */
-  /* z-index: -1; */
-  /* bottom: 39px; */
-  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 3s; /* Firefox < 16 */
-   -ms-animation: fadein 3s; /* Internet Explorer */
-    -o-animation: fadein 3s; /* Opera < 12.1 */
+  -webkit-animation: fadein 3s;
+  -moz-animation: fadein 3s; 
+   -ms-animation: fadein 3s; 
+    -o-animation: fadein 3s; 
        animation: fadein 3s;
 }
 
@@ -396,29 +391,25 @@ a {
   to   { opacity: 1; }
 }
 
-/* Firefox < 16 */
 @-moz-keyframes fadein {
   from { opacity: 0.1; }
   to   { opacity: 1; }
 }
 
-/* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
   from { opacity: 0.1; }
   to   { opacity: 1; }
 }
 
-/* Internet Explorer */
 @-ms-keyframes fadein {
   from { opacity: 0.1; }
   to   { opacity: 1; }
 }
 
-/* Opera < 12.1 */
 @-o-keyframes fadein {
   from { opacity: 0.1; }
   to   { opacity: 1; }
-}
+} */
 
 .main-container {
   background-color: rgb(211, 211, 211);
